--- a/prepros-6.config
+++ b/prepros-6.config
@@ -20,7 +20,8 @@
       "App/src/pug/pages",
       "src",
       "src/pug",
-      "src/pug/pages"
+      "src/pug/pages",
+      "src/pug/pages/subpages"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -36,7 +37,81 @@
   },
   "imports": [
     {
+      "path": "src/scss/slides.scss",
+      "imports": [
+        "src/scss/reset.scss",
+        "src/scss/mixins.scss",
+        "src/scss/variables.scss",
+        "src/scss/framework.scss",
+        "src/scss/text.scss",
+        "src/scss/colors.scss",
+        "src/scss/fonts.scss",
+        "src/scss/grid.scss",
+        "src/scss/flex.scss",
+        "src/scss/dialog.scss",
+        "src/scss/useful-classes.scss",
+        "src/scss/material-icons.scss",
+        "src/scss/layout.scss",
+        "src/scss/sprites.scss",
+        "src/scss/custom.scss"
+      ]
+    },
+    {
+      "path": "src/pug/includes/footer.pug",
+      "imports": [
+        "src/pug/includes/svg_libraries.pug"
+      ]
+    },
+    {
+      "path": "src/pug/includes/head.pug",
+      "imports": [
+        "src/pug/functions/+global.pug",
+        "src/pug/data/global.pug",
+        "src/pug/data/_category.pug",
+        "src/pug/data/_product.pug",
+        "src/pug/components/+mixins.pug",
+        "src/pug/plugins/libraries++.pug",
+        "src/pug/includes/navbar.pug",
+        "src/pug/includes/sidebar.pug"
+      ]
+    },
+    {
       "path": "src/pug/pages/homepage.pug",
+      "imports": [
+        "src/pug/includes/head.pug",
+        "src/pug/scripts/console.js",
+        "src/pug/includes/footer.pug",
+        "src/pug/functions/+global.pug",
+        "src/pug/data/global.pug",
+        "src/pug/data/_category.pug",
+        "src/pug/data/_product.pug",
+        "src/pug/components/+mixins.pug",
+        "src/pug/plugins/libraries++.pug",
+        "src/pug/includes/navbar.pug",
+        "src/pug/includes/sidebar.pug",
+        "src/pug/includes/svg_libraries.pug"
+      ]
+    },
+    {
+      "path": "src/pug/pages/category/category-1.pug",
+      "imports": [
+        "src/pug/includes/head.pug",
+        "src/pug/scripts/alert.js",
+        "src/pug/scripts/console.js",
+        "src/pug/includes/footer.pug",
+        "src/pug/functions/+global.pug",
+        "src/pug/data/global.pug",
+        "src/pug/data/_category.pug",
+        "src/pug/data/_product.pug",
+        "src/pug/components/+mixins.pug",
+        "src/pug/plugins/libraries++.pug",
+        "src/pug/includes/navbar.pug",
+        "src/pug/includes/sidebar.pug",
+        "src/pug/includes/svg_libraries.pug"
+      ]
+    },
+    {
+      "path": "src/pug/pages/product/product-1.pug",
       "imports": [
         "src/pug/includes/head.pug",
         "src/pug/scripts/console.js",
