Cambio para certificacion

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,6 +10,10 @@
     {
       "path": "src/pug/pages/homepage.pug",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "src/pug/includes/footer.pug",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
     }
   ],
   "fileTree": {
@@ -37,42 +41,9 @@
   },
   "imports": [
     {
-      "path": "src/scss/slides.scss",
-      "imports": [
-        "src/scss/reset.scss",
-        "src/scss/mixins.scss",
-        "src/scss/variables.scss",
-        "src/scss/framework.scss",
-        "src/scss/text.scss",
-        "src/scss/colors.scss",
-        "src/scss/fonts.scss",
-        "src/scss/grid.scss",
-        "src/scss/flex.scss",
-        "src/scss/dialog.scss",
-        "src/scss/useful-classes.scss",
-        "src/scss/material-icons.scss",
-        "src/scss/layout.scss",
-        "src/scss/sprites.scss",
-        "src/scss/custom.scss"
-      ]
-    },
-    {
       "path": "src/pug/includes/footer.pug",
       "imports": [
         "src/pug/includes/svg_libraries.pug"
-      ]
-    },
-    {
-      "path": "src/pug/includes/head.pug",
-      "imports": [
-        "src/pug/functions/+global.pug",
-        "src/pug/data/global.pug",
-        "src/pug/data/_category.pug",
-        "src/pug/data/_product.pug",
-        "src/pug/components/+mixins.pug",
-        "src/pug/plugins/libraries++.pug",
-        "src/pug/includes/navbar.pug",
-        "src/pug/includes/sidebar.pug"
       ]
     },
     {
@@ -170,7 +141,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
